--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,14 @@
-
+<div class="flex justify-between bg-gray-200 p-4">
 <%= link_to "トップ", root_path %> |
 
+<%= link_to "レビュー一覧", reviews_path %>
 <% if logged_in? %>
-  <%= link_to "ログアウト", logout_path, method: :delete %>
+  <%= link_to "マイレビュー", user_path(current_user) %>
+<% end %>
+
+<% if logged_in? %>
+  <%= link_to "ログアウト", logout_path, data: {turbo_method: :delete} %>
 <% else %>
   <%= link_to "ログイン", :login %>
 <% end %>
+</div>
