レビュー作成機能実装 #16 #27

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body>
+  <body class="bg-orange-100">
     <%= render "shared/header" %>
+    <%= render "shared/flash_message" %>
     <%= yield %>
   </body>
 </html>
