--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto w-full h-full">
+<div class="container mx-auto w-full h-screen">
   <div class="flex justify-around my-5">
     <div>
       <input type="text" placeholder="フリーワード" class="input input-bordered w-full max-w-xs" />
