--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="w-full h-screen">
+  <div class="flex justify-center items-center h-10 py-10">
+    <p>画像</p>
+    <h2><%= @user.name %></h2>
+  </div>
+
+  <div class="flex justify-around">
+  <div>
+    <h2>推しイヤホン</h2>
+    
+  </div>
+  <div>
+    <h2>最近のレビュー</h2>
+  </div>
+  </div>
+</div>
