--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -13,6 +13,20 @@
           <%= f.label :name %>
           <%= f.text_field :name, placeholder: "@review.name" %>
         </div>
+
+        <div class="my-5">
+          <%= f.label :rating %>
+          <div class="rating">
+            <% 5.times do |num| %>
+              <% if @review.rating == num + 1 %>
+                <%= f.radio_button :rating, num + 1, class: "mask mask-star bg-orange-400", checked: true %>
+              <% else %>
+                <%= f.radio_button :rating, num + 1, class: "mask mask-star bg-orange-400" %>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+
       </div>
     </div>
 
