--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -5,20 +5,30 @@
         <div class="w-80 h-80 bg-slate-400">
         </div>
         
-        <div>
+        <div class="py-5">
           <%= f.label :image %>
           <%= f.file_field :image %>
         </div>
       </div>
 
       <div class="w-96 h-96">
-        <div class= "my-5">
+        <div class="my-5">
           <%= f.label :maker%>
           <%= f.text_field :maker %>
         </div>
-        <div class= "my-5">
+        <div class="my-5">
           <%= f.label :name %>
           <%= f.text_field :name %>
+        </div>
+        <div class="my-5">
+          <%= f.label :rating %>
+          <div class="rating">
+            <%= f.radio_button :rating, 1, class: "mask mask-star bg-orange-400" %>
+            <%= f.radio_button :rating, 2, class: "mask mask-star bg-orange-400" %>
+            <%= f.radio_button :rating, 3, class: "mask mask-star bg-orange-400" %>
+            <%= f.radio_button :rating, 4, class: "mask mask-star bg-orange-400" %>
+            <%= f.radio_button :rating, 5, class: "mask mask-star bg-orange-400" %>
+          </div>
         </div>
       </div>
     </div>
