--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -17,6 +17,15 @@
         <p>名前</p>
         <p><%= @review.name %></p>
       </div>
+      <div class= "mb-5">
+        <p>評価</p>
+        <div class="flex rating">
+          <% @review.rating.times do %>
+            <div class="w-5 h-5 mask mask-star bg-orange-400"></div>
+          <% end %>
+        </div>
+      </div>
+
     </div>
   </div>
 
