バリデーションエラー時のレイアウト崩れ対応

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full h-screen">
-  <div class="flex justify-center items-center h-10 py-10">
+  <div class="flex justify-center items-center h-10 py-10 space-x-5">
     <p>画像</p>
     <h2><%= @user.name %></h2>
   </div>
