--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -23,6 +23,7 @@
         <div class="my-5">
           <%= f.label :rating %>
           <div class="rating">
+            <%= f.radio_button :rating, 0, class: "rating-hidden", checked: true %>
             <%= f.radio_button :rating, 1, class: "mask mask-star bg-orange-400" %>
             <%= f.radio_button :rating, 2, class: "mask mask-star bg-orange-400" %>
             <%= f.radio_button :rating, 3, class: "mask mask-star bg-orange-400" %>
