--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 
   <% if logged_in? %>
-    <%= link_to "ログアウト", logout_path, data: {turbo_method: :delete} %>
+    <%= link_to "ログアウト", logout_path, data: {turbo_method: :delete, turbo_confirm: "ログアウトしますか？"} %>
   <% else %>
     <%= link_to "ログイン", :login %>
   <% end %>
