--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,20 @@
 <div class="w-full h-screen">
-  <div class="flex justify-center items-center h-10 py-10 space-x-5">
-    <p>画像</p>
-    <h2><%= @user.name %></h2>
+  <div class="flex flex-col space-y-5 items-center my-10">
+    <% if @user.avatar.attached? %>
+      <%= image_tag url_for(@user.avatar), size: "25x25", class: "rd-5" %>
+    <% else %>
+      <%= image_tag asset_path("default.png"), size: "75x75", class: "rd-5" %>
+    <% end %>
+    <h2><%= @user.name %> さん</h2>
+    <% if @user.id == current_user.id %>
+      <%= link_to "プロフィールを編集する", edit_user_path, class: "btn" %>
+    <% end %>
   </div>
 
-  <div class="flex justify-around">
-  <div>
-    <h2>推しイヤホン</h2>
-    
-  </div>
-  <div>
-    <h2>最近のレビュー</h2>
-  </div>
+  <div class="flex flex-col items-center">
+    <h2>マイレビュー</h2>
+    <div class="flex justify-around grid grid-cols-3 pt-3">
+      <%= render partial: "shared/card", collection: @review, as: 'review' %>
+    </div>
   </div>
 </div>
