--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="mr-10 mb-5 pb-12 bg-amber-50 rounded-md hover:bg-yellow-100">
+<div class="mr-10 mb-5 rounded-md shadow-md bg-white hover:bg-yellow-100">
   <a href="/reviews/<%= review.id %>">
     <div class="flex">
       <div class="w-32 h-32 m-5">
@@ -19,6 +19,15 @@
         </div>
         <div class="w-full h-24 rounded-md bg-zinc-300">
           <p><%= review.body %></p>
+        </div>
+        <div class="flex mt-5 space-x-4">
+          <% if review.user.avatar.attached? %>
+            <%= image_tag url_for(review.user.avatar), size: "30x30" %>
+          <% else %>
+            <%= image_tag asset_path("default.png"), size: "30x30" %>
+          <% end %>
+
+          <p><%= review.user.name %></p>
         </div>
       </div>
     </div>
