--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center bg-orange-100 p-4 h-20 border-b-4 border-slate-500">
+<div class="flex justify-between items-center p-4 h-20 border-b-4 border-slate-500">
   <%= link_to "トップ", root_path %> |
 
   <%= link_to "レビュー作成", new_review_path %>
