--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="flex justify-center w-screen h-screen bg-lime-100">
+<div class="flex justify-center w-screen h-screen">
   <div class="flex-col my-40">
     <h1 class="text-5xl font-bold">会員登録</h1>
     <%= form_with model: @user do |f| %>
