--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,8 @@
     <% else %>
       <%= image_tag asset_path("default.png"), size: "75x75", class: "rd-5" %>
     <% end %>
-    <h2><%= @user.name %> さん</h2>
-    <% if @user.id == current_user.id %>
+    <h2><%= @user.name %></h2>
+    <% if current_user.present? && @user.id == current_user.id %>
       <%= link_to "プロフィールを編集する", edit_user_path, class: "btn" %>
     <% end %>
   </div>
