--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -20,11 +20,11 @@
         <div class="w-full h-24 rounded-md bg-zinc-300">
           <p><%= review.body %></p>
         </div>
-        <div class="flex mt-5 space-x-4">
+        <div class="flex mt-5 space-x-4 items-center">
           <% if review.user.avatar.attached? %>
-            <%= image_tag url_for(review.user.avatar), size: "30x30" %>
+            <%= image_tag url_for(review.user.avatar), class: "object-cover w-8 h-8 rounded-full"%>
           <% else %>
-            <%= image_tag asset_path("default.png"), size: "30x30" %>
+            <%= image_tag asset_path("default.png"), class: "object-cover w-8 h-8 rounded-full"%>
           <% end %>
 
           <p><%= review.user.name %></p>
