--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <div class="w-full h-screen">
   <div class="flex flex-col space-y-5 items-center my-10">
     <% if @user.avatar.attached? %>
-      <%= image_tag url_for(@user.avatar), size: "25x25", class: "rd-5" %>
+      <%= image_tag url_for(@user.avatar), class: "object-cover w-24 h-24 rounded-full" %>
     <% else %>
-      <%= image_tag asset_path("default.png"), size: "75x75", class: "rd-5" %>
+      <%= image_tag asset_path("default.png"), class: "object-cover w-24 h-24 rounded-full" %>
     <% end %>
     <h2><%= @user.name %></h2>
     <% if current_user.present? && @user.id == current_user.id %>
