--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto w-full h-screen px-8 py-14">
+<div class="container mx-auto w-full min-h-screen px-8 py-14">
   <div class="w-3/4 mx-auto mb-5">
     <%= link_to user_path(@review.user.id), class: "flex space-x-3 items-center" do%>
       <% if @review.user.avatar.attached? %>
@@ -43,7 +43,7 @@
 
   <div class="w-3/4 mx-auto">
     <p>レビュー</p>
-    <p class="w-full h-32 bg-stone-200"><%= @review.body %></p>
+    <p class="w-full bg-white p-8"><%= @review.body %></p>
   </div>
 
   <div class="flex justify-around my-10">
