レビュー作成、編集時のレビュー欄を大きくした

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -35,7 +35,7 @@
     </div>
 
     <div class="flex flex-col my-10">
-      <%= f.text_area :body, class: "textarea textarea-bordered w-3/4 mx-auto", placeholder: "レビュー" %>
+      <%= f.text_area :body, class: "textarea textarea-bordered min-h-96 w-3/4 mx-auto", placeholder: "レビュー" %>
       <div class="mx-auto my-10">
         <%= f.submit "投稿する", class: "btn stone-300" %>
       </div>
