--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,8 +2,7 @@
   <%= form_with model: @review do |f| %>
     <div class="flex justify-center space-x-40">
       <div>
-        <div class="w-80 h-80 bg-slate-400">
-        </div>
+        <%= image_tag asset_path("image.png"), class: "object-contain w-80 h-80 rounded-md bg-zinc-200" %>
         
         <div class="py-5">
           <%= f.label :image %>
