--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto w-full h-screen px-8 py-14">
+<div class="container mx-auto w-full min-h-screen px-8 py-14">
   <%= form_with model: @review do |f| %>
     <div class="flex justify-center space-x-32">
       <div>
