ソート機能実装

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,15 +1,16 @@
 <div class="container mx-auto w-full h-screen">
-  <div class="flex justify-around my-5">
-    <div>
-      <input type="text" placeholder="フリーワード" class="input input-bordered w-full max-w-xs" />
-    </div>
-    <div>
-      <input type="text" placeholder="タグ" class="input input-bordered w-full max-w-xs" />
-    </div>
-    <div>
-      <input type="text" placeholder="昇順"class="input input-bordered w-full max-w-xs" />
-    </div>
-  </div>
+    <%= form_with url: reviews_path, method: :get, class: "flex justify-around my-5" do |f| %>
+      <div>
+        <input type="text" placeholder="フリーワード" class="input input-bordered w-full max-w-xs" />
+      </div>
+      <div>
+        <input type="text" placeholder="タグ" class="input input-bordered w-full max-w-xs" />
+      </div>
+      <div>
+        <%= f.select :sort, ["latest", "old", "star"], {}, class: "select select-bordered w-full max-w-md" %>
+      </div>
+      <%= f.submit "検索", class: "btn" %>
+    <% end %>
 
   <div class="flex justify-around grid grid-cols-3 pt-3">
     <%= render partial: "shared/card", collection: @reviews, as: 'review'%>
