フリーワード検索の実装

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,17 +1,17 @@
 <div class="container mx-auto w-full h-screen">
-    <%= form_with url: reviews_path, method: :get, class: "flex justify-around my-5" do |f| %>
-      <div>
-        <input type="text" placeholder="フリーワード" class="input input-bordered w-full max-w-xs" />
-      </div>
-      <div>
-        <input type="text" placeholder="タグ" class="input input-bordered w-full max-w-xs" />
-      </div>
-      <div>
-        <%= f.select :sort, ["latest", "old", "star"], {selected: params[:sort]}, class: "select select-bordered w-full max-w-md" %>
-      </div>
-      <%= f.submit "検索", class: "btn" %>
+  <div class="flex justify-around">
+    <%= search_form_for @q, class: "flex space-x-32 my-5" do |f| %>
+      <%= f.search_field :maker_or_name_or_body_cont, placeholder: "フリーワード", class: "input input-bordered w-full max-w-xs" %>
+      <input type="text" placeholder="タグ" class="input input-bordered w-full max-w-xs" />
+
+      <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
 
+    <%= form_with url: reviews_path, method: :get, class: "my-5" do |f| %>
+      <%= f.select :sort, ["latest", "old", "star"], {selected: params[:sort]}, onchange: 'this.form.submit()', class: "select select-bordered w-full max-w-xs" %>
+    <% end %>
+  </div>
+  
   <div class="flex justify-around grid grid-cols-3 pt-3">
     <%= render partial: "shared/card", collection: @reviews, as: 'review'%>
   </div>
