--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -6,6 +6,8 @@
     remote:        data-remote
     paginator:     the paginator that renders the pagination tags inside
 -%>
+
+<div class="join mt-8 flex justify-center">
 <%= paginator.render do -%>
   <nav class="pagination" role="navigation" aria-label="pager">
     <%= first_page_tag unless current_page.first? %>
