--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -18,7 +18,7 @@
           <% end %>
         </div>
         <div class="w-full h-24 rounded-md p-3 bg-zinc-300">
-          <p class="line-clamp-3"><%= review.body %></p>
+          <p class="line-clamp-3 whitespace-pre-line"><%= review.body %></p>
         </div>
         <div class="flex mt-5 space-x-4 items-center">
           <% if review.user.avatar.attached? %>
