レビュー一覧レスポンシブ対応

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,18 +1,16 @@
-<div class="container mx-auto w-full h-screen">
-  <div class="flex justify-around">
-    <%= search_form_for @q, class: "flex space-x-32 my-5" do |f| %>
+<div class="container mx-auto items-center w-full min-h-screen">
+  <div class="flex max-sm:flex-col justify-around">
+    <%= search_form_for @q, class: "mx-auto flex space-x-12 lg:space-x-36 my-5" do |f| %>
       <%= f.search_field :maker_or_name_or_body_cont, placeholder: "フリーワード", class: "input input-bordered w-full max-w-xs" %>
-      <input type="text" placeholder="タグ" class="input input-bordered w-full max-w-xs" />
-
       <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
 
-    <%= form_with url: reviews_path, method: :get, class: "my-5" do |f| %>
+    <%= form_with url: reviews_path, method: :get, class: "mx-auto my-5" do |f| %>
       <%= f.select :sort, ["latest", "old", "star"], {selected: params[:sort]}, onchange: 'this.form.submit()', class: "select select-bordered w-full max-w-xs" %>
     <% end %>
   </div>
 
-  <div class="flex justify-around grid grid-cols-3 pt-3">
+  <div class="flex grid grid-cols-1 pt-3 md:grid-cols-2 xl:grid-cols-3">
     <%= render partial: "shared/card", collection: @reviews, as: 'review'%>
   </div>
 
