レビュー作成、ユーザー関連のページをレスポンシブ対応

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,16 +1,15 @@
 <div class="container mx-auto w-full min-h-screen px-8 py-14">
   <%= form_with model: @review do |f| %>
-    <div class="flex justify-center space-x-32">
-      <div>
-        <%= image_tag asset_path("image.png"), class: "object-contain w-80 h-80 rounded-md bg-zinc-200" %>
-        
+    <div class="flex justify-center mx-auto md:space-x-32 max-sm:flex-col">
+      <div class="max-sm:max-w-80 max-sm:w-full max-sm:mx-auto">
+        <%= image_tag asset_path("image.png"), class: "object-contain max-w-80 max-h-80 rounded-md bg-zinc-200" %>
         <div class="py-5">
           <%= f.label :image %>
           <%= f.file_field :image %>
         </div>
       </div>
 
-      <div class="w-96 h-96">
+      <div class="max-sm:max-w-80 max-sm:w-full max-sm:mx-auto">
         <div class="my-5">
           <%= f.label :maker%>
           <%= f.text_field :maker %>
@@ -33,10 +32,10 @@
       </div>
     </div>
 
-    <div class="flex flex-col my-10">
-      <%= f.text_area :body, class: "textarea textarea-bordered min-h-96 w-3/4 mx-auto", placeholder: "レビュー" %>
+    <div class="flex flex-col my-10 max-sm:w-full max-sm:mx-auto">
+      <%= f.text_area :body, class: "textarea textarea-bordered min-h-96 w-full lg:w-3/4 mx-auto", placeholder: "レビュー" %>
       <div class="mx-auto my-10">
-        <%= f.submit "投稿する", class: "btn stone-300" %>
+        <%= f.submit "投稿する", class: "btn bg-stone-300" %>
       </div>
     </div>
   <% end %>
