--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full h-screen">
+<div class="w-full min-h-screen">
   <div class="flex flex-col space-y-5 items-center my-10">
     <% if @user.avatar.attached? %>
       <%= image_tag url_for(@user.avatar), class: "object-cover w-24 h-24 rounded-full" %>
