--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
         <%= f.text_field :name %>
       </div>
       <div class="my-5">
-        <%= f.submit "更新", class: "btn" %>
+        <%= f.submit t('.update'), class: "btn" %>
       </div>
     <% end %>
   </div>
