--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -41,9 +41,9 @@
     </div>
 
     <div class="flex flex-col my-10">
-      <%= f.text_area :body, class: "textarea textarea-bordered min-h-96 w-3/4 mx-auto", placeholder: "レビュー" %>
+      <%= f.text_area :body, class: "textarea textarea-bordered min-h-96 w-3/4 mx-auto", placeholder: t('.review') %>
       <div class="mx-auto my-10">
-        <%= f.submit "更新する", placeholder: "@review.body", class: "btn stone-300" %>
+        <%= f.submit t('.update'), placeholder: "@review.body", class: "btn stone-300" %>
       </div>
     </div>
   <% end %>
