--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,12 @@
 <div class="flex justify-between items-center p-4 h-20 border-b-4 border-slate-500">
-  <%= link_to "トップ", root_path %> |
+  <%= link_to t('header.top'), root_path %> |
 
-  <%= link_to "レビュー作成", new_review_path %>
+  <%= link_to t('header.review_create'), new_review_path %>
 
-  <%= link_to "レビュー一覧", reviews_path %>
+  <%= link_to t('header.review_index'), reviews_path %>
   <% if logged_in? %>
-    <%= link_to "マイページ", user_path(current_user) %>
+    <%= link_to t('header.mypage'), user_path(current_user) %>
   <% else %>
-    <%= link_to "ログイン", :login %>
+    <%= link_to t('header.login'), :login %>
   <% end %>
 </div>
